# wifi-tui

./: Cargo.toml  README.md  ffi.md
src/: app.rs  lib.rs  main.rs  ui.rs
src/scanner/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: scanner_test.rs
